--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,135 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "My first MarkDown document"
+output: html_document
 ---
 
+Loading and preprocessing the data
+```{r} 
 
-## Loading and preprocessing the data
+library(ggplot2)
+library(lattice) 
+library(plyr)
 
+#Loading Data
+  dt_act <- read.csv("activity.csv")
 
+#Processing Data
+  dt_act$day      <- weekdays(as.Date(dt_act$date))
+  dt_act$DateTime <- as.POSIXct(dt_act$date, format="%Y-%m-%d")
+  
+```
 
-## What is mean total number of steps taken per day?
+What is mean total number of steps taken per day?
 
+Note: For this part of the assignment, you can ignore the missing values in the dataset.
 
+1. Calculate the total number of steps taken per day
+```{r} 
 
-## What is the average daily activity pattern?
+  sumTable <- aggregate(dt_act$steps ~ dt_act$date, FUN=sum,)
+  colnames(sumTable)<- c("Date", "Steps")
+  
+```
 
+2. Make a histogram of the total number of steps taken each day
+```{r} 
 
+hist(sumTable$Steps, breaks=5, xlab="Steps", main = "Total Steps per Day")
 
-## Imputing missing values
+```
 
+3. Calculate and report the mean and median of the total number of steps taken per day
+```{r} 
 
+  as.integer(mean(sumTable$Steps))
+  as.integer(median(sumTable$Steps))
+  
+```
 
-## Are there differences in activity patterns between weekdays and weekends?
+What is the average daily activity pattern?
+
+Make a time series plot (i.e type="l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
+```{r}
+# Pulling data without nas
+clean <- dt_act[!is.na(dt_act$steps),]
+
+# Create average number of steps per interval
+  intervalTable <- ddply(clean, .(interval), summarize, Avg = mean(steps))
+
+# Create line plot of average number of steps per interval
+p <- ggplot(intervalTable, aes(x=interval, y=Avg), xlab = "Interval", ylab="Average Number of Steps")
+p + geom_line()+xlab("Interval")+ylab("Average Number of Steps")+ggtitle("Average Number of Steps per Interval")
+
+```
+
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r}
+# Maximum steps by interval
+  maxSteps <- max(intervalTable$Avg)
+  
+# Which interval contains the maximum average number of steps
+  intervalTable[intervalTable$Avg==maxSteps,1]
+```
+
+Imputing missing values
+
+Note that there are a number of days/intervals where there are missing values (NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
+
+Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+
+Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r}
+# Create the average number of steps per weekday and interval
+  avgTable <- ddply(clean, .(interval, day), summarize, Avg = mean(steps))
+  
+# Create dataset with all NAs for substitution
+  nadata <- dt_act[is.na(dt_act$steps),]
+  
+# Merge NA data with average weekday interval for substitution
+  newdata <-merge(nadata, avgTable, by=c("interval", "day"))
+  
+# Reorder the new substituded data in the same format as clean data set
+  newdata2 <- newdata[,c(6,4,1,2,5)]
+  colnames(newdata2)<- c("steps", "date", "interval", "day", "DateTime")
+  
+# Merge the NA averages and non NA data together
+  mergeData <- rbind(clean, newdata2)
+  
+# Create sum of steps per date to compare with step 1
+  sumTable2 <- aggregate(mergeData$steps ~ mergeData$date, FUN=sum,)
+  colnames(sumTable2)<- c("Date", "Steps")
+```
+  
+Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+```{r}
+# 6. Make a histogram of the total number of steps taken each day after missing values are imputed
+hist(sumTable2$Steps, breaks=5, xlab="Steps", main="Total Steps per Day with NAs Fixed", col="Black")
+hist(sumTable$Steps,  breaks=5, xlab="Steps", main="Total Steps per Day with NAs Fixed", col="Grey", add=T)
+legend("topright", c("Imputed Data", "Non-NA Data"), fill=c("black", "grey") )
+```
+
+Are there differences in activity patterns between weekdays and weekends?
+For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
+
+Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+```{r}
+# Create new category based on the days of the week
+mergeData$DayCategory <- ifelse(mergeData$day %in% c("sabado", "domingo"), "Weekend", "Weekday")
+  
+# Summarize data by interval and type of day
+intervalTable2 <- ddply(mergeData, .(interval, DayCategory), summarize, Avg = mean(steps))
+```
+
+Make a panel plot containing a time series plot (i.e. type = "l"|}type="l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+```{r}
+# Plot data in a panel plot
+xyplot(Avg~interval|DayCategory, data=intervalTable2, type="l", layout = c(1,2),
+       main="Average Steps per Interval Based on Type of Day", 
+       ylab="Average Number of Steps", xlab="Interval")
+```
+
